tests/infinite_type/fail_2.stderr
error[E0275]: overflow evaluating the requirement `mpstthree::binary::Send<i32, mpstthree::binary::Recv<i32, mpstthree::binary::Recv<SumOp<i32>, mpstthree::binary::End>>>: std::marker::Send`
  --> $DIR/fail_2.rs:19:23
   |
19 | fn nice_sum_server(s: NiceSumServer<i32>) -> Result<(), Box<dyn Error>> {
   |                       ^^^^^^^^^^^^^^^^^^
   |
  ::: $WORKSPACE/src/binary.rs
   |
   |     T: marker::Send,
   |        ------------ required by this bound in `mpstthree::binary::Recv`
   |
   = note: required because it appears within the type `SumOp<i32>`

error[E0275]: overflow evaluating the requirement `mpstthree::binary::Send<i32, mpstthree::binary::Recv<i32, mpstthree::binary::Recv<SumOp<i32>, mpstthree::binary::End>>>: std::marker::Send`
  --> $DIR/fail_2.rs:23:29
   |
23 | fn nice_sum_server_accum(s: NiceSumServer<i32>, x: i32) -> Result<(), Box<dyn Error>> {
   |                             ^^^^^^^^^^^^^^^^^^
   |
  ::: $WORKSPACE/src/binary.rs
   |
   |     T: marker::Send,
   |        ------------ required by this bound in `mpstthree::binary::Recv`
   |
   = note: required because it appears within the type `SumOp<i32>`

error[E0275]: overflow evaluating the requirement `mpstthree::binary::Recv<SumOp<i32>, mpstthree::binary::End>: mpstthree::binary::Session`
  --> $DIR/fail_2.rs:44:1
   |
44 | / fn nice_sum_client_accum(s: NiceSumClient<i32>, mut xs: Vec<i32>) -> Result<i32, Box<dyn Error>> {
45 | |     match xs.pop() {
46 | |         Option::Some(x) if x % 2 == 0 => {
47 | |             let s = choose!(SumOp::More, s);
...  |
64 | |     }
65 | | }
   | |_^
   |
   = note: required because of the requirements on the impl of `mpstthree::binary::Session` for `mpstthree::binary::Recv<i32, mpstthree::binary::Recv<SumOp<i32>, mpstthree::binary::End>>`
   = note: required because it appears within the type `mpstthree::binary::Send<i32, mpstthree::binary::Recv<i32, mpstthree::binary::Recv<SumOp<i32>, mpstthree::binary::End>>>`
   = note: required because it appears within the type `SumOp<i32>`
   = note: required because of the requirements on the impl of `mpstthree::binary::Session` for `mpstthree::binary::Recv<SumOp<i32>, mpstthree::binary::End>`
